# kimi-possible

./: .env  .gitignore  README.md  USAGE.md  kimi-possible.py  kimi-tool-calling.md  kimi_possible.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  wrangler.jsonc
archive/: kimi-possible.py  requirements.txt
archive/config-examples/: content-research.json  technical-research.json
config-examples/: market-research.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/components/chat/: ChatContainer.tsx  ChatInput.tsx  DomainSelector.tsx  MessageBubble.tsx  MessageList.tsx
src/hooks/: useChat.ts
src/lib/ai/: agent.ts  openrouter.ts  prompts.ts
src/lib/ai/tools/: exa-search.ts  index.ts  live-search.ts  youtube-search.ts
src/lib/types/: index.ts
