[project]
name = "kimi-possible"
version = "0.1.0"
description = "An AI code assistant with function calling, powered by Kimi-K2 via OpenRouter."
requires-python = ">=3.8"
dependencies = [
    "openai",
    "pydantic",
    "python-dotenv",
    "rich",
    "prompt-toolkit",
    "exa-py"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
