[project]
name = "kimi-possible"
version = "0.1.0"
description = "AI research assistant and code helper with web search capabilities, powered by Kimi-K2 via OpenRouter."
requires-python = ">=3.8"
dependencies = [
    "openai",
    "pydantic", 
    "python-dotenv",
    "rich",
    "prompt-toolkit",
    "exa-py",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
